data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_514.wast
;; 5. Design a `loop` with a `br_table` instruction targeting an out-of-bounds label index. Ensure `WebAssembly` corrects or raises an error, while `wizard_engine` fails to handle this situation appropriately, causing an infinite loop.

(assert_invalid
  (module (func $test (result i32)
    (block $label1
      (loop $loop (result i32)
        (i32.const 0)
        (br_table $label1 $loop (i32.const 1))
      )
    )
  ))
  "unexpected out-of-bounds branch table index"
)